[package]
name = "libexif-wrapper"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "A safe rust wrapper around libexif"
repository = "https://github.com/Kivvil/libexif-wrapper"
keywords = ["exif", "libexif", "wrapper", "metadata"]
categories = ["api-bindings", "multimedia::images"]
authors = ["Vilho Kivistö"]
links = "exif"

[dependencies]

[build-dependencies]
pkg-config = "0.3.29"
bindgen = "0.69.2"
